  Additionally, one can now write unreachable cases, of the form,
  "pat -> .", which are treated by the redundancy check. (Jacques Garrigue)
- PR#6374: allow "_ t" as a short-hand for "(_, _, ..) t" for n-ary type
  constructors (Alain Frisch)
- PR#6714: allow [@@ocaml.warning] on most structure and signature items:
  values, modules, module types
  (whitequark)
- GPR#26: support for "(type a b)" as syntactic sugar for "(type a) (type b)"
  (Gabriel Scherer)
- GPR#42: short functor type syntax: "S -> T" for "functor (_ : S) -> T"
  (Leo White)
- GPR#88: allow field punning in object copying expressions:
    {< x; y; >} is sugar for {< x = x; y = y; >}
  (Jeremy Yallop)
- GPR#112: octal escape sequences for char and string literals
  (Rafaël Bocquet)
- GPR#167: allow to annotate externals' arguments and result types so
  they can be unboxed or untagged. Supports untagging int and unboxing
  int32, int64, nativeint and float.
  (Jérémie Dimino, Mark Shinwell)
- GPR240: replace special annotations on externals by attributes:
  * "float" is generalized to [@@unboxed]
  * "noalloc" becomes [@@noalloc]
  Deprecate "float" and "noalloc".
  (Jérémie Dimino)
- GPR#254: @ocaml.warn_on_literal_pattern attribute on constructors to
  warn when the argument is matches against a constant pattern.  This
  attribute is applied on predefined exception constructors which
  take an purely informational (with no stability guarantee) message.
  (Alain Frisch)
- GPR#268: hexadecimal notation for floating-point literals
  In OCaml source code, FP literals can be written using the hexadecimal
  notation 0x<mantissa in hex>p<exponent> from ISO C99.
  (Xavier Leroy)
- GPR#173: [@inline] and [@inlined] attributes (for function declarations
  and call sites respectively) to control inlining
  (Pierre Chambart, Mark Shinwell)
- PR#6806: Syntax shortcut for putting a type annotation on a record field
  (Valentin Gatien-Baron, review by Jérémie Dimino)