@@ -17,6 +17,9 @@ Language features:
 - PR#6714: allow [@@ocaml.warning] on most structure and signature items:
   values, modules, module types
   (whitequark)
+- PR#7118, PR#7120: Bug fixed in stack unwinding metadata generation.
+  Was a cause of crashes in GUI programs on OS X.
+  (Bart Jacobs)
 - GPR#26: support for "(type a b)" as syntactic sugar for "(type a) (type b)"
   (Gabriel Scherer)
 - GPR#42: short functor type syntax: "S -> T" for "functor (_ : S) -> T"
